# etsync

./: .gitignore  .secrets.toml.example  README.md  pyproject.toml  settings.toml
.claude/: CLAUDE.md
docs/changes/001-initial-listings-export/: design.md  proposal.md  tasks.md
docs/changes/001-initial-listings-export/specs/listings/: spec.md
docs/changes/002-sync-tracking-and-analytics/: design.md  proposal.md  tasks.md
docs/changes/002-sync-tracking-and-analytics/specs/analytics/: spec.md
docs/changes/002-sync-tracking-and-analytics/specs/git-tracking/: spec.md
docs/changes/002-sync-tracking-and-analytics/specs/index-navigation/: spec.md
docs/changes/003-listings-push/: design.md  proposal.md  tasks.md
docs/changes/003-listings-push/specs/push/: spec.md
docs/changes/004-analytics-upgrade/: design.md  proposal.md  tasks.md
docs/changes/005-translations/: design.md  proposal.md  tasks.md
docs/strategy/: 00-overview.md  01-etsy-seo-and-algorithm.md  02-category-playbooks.md  03-eu-market-strategy.md  04-shop-growth-and-marketing.md  05-eu-to-us-selling.md  06-listing-description-optimization.md  07-translation-seo-by-market.md
etsync/: __main__.py  auth.py  cli.py  config.py  data_repo.py
etsync/analytics/: __init__.py  pull.py  query.py  schema.py
etsync/listings/: __init__.py  pull.py  push.py  translations.py
scripts/: fix_long_tags.py
tests/: test_analytics.py  test_analytics_receipts.py  test_analytics_reviews.py  test_analytics_schema.py  test_config.py  test_data_repo.py  test_listings.py  test_push.py  test_translations.py
(+3 files in other folders)
